etapa2/parser.output
Terminals unused in grammar

    TK_PR_THEN
    TK_PR_FOREACH
    TK_PR_SWITCH
    TK_PR_CASE
    TK_PR_CLASS
    TK_PR_PRIVATE
    TK_PR_PUBLIC
    TK_PR_PROTECTED
    TK_PR_END
    TK_PR_DEFAULT
    TOKEN_ERRO
    HASHTAGRIGHT
    STARRIGHT
    AMPERSANDRIGHT


Grammar

    0 $accept: programa $end

    1 tipo: TK_PR_INT
    2     | TK_PR_FLOAT
    3     | TK_PR_BOOL
    4     | TK_PR_CHAR
    5     | TK_PR_STRING

    6 literal: TK_LIT_INT
    7        | TK_LIT_FLOAT
    8        | TK_LIT_FALSE
    9        | TK_LIT_TRUE
   10        | TK_LIT_CHAR
   11        | TK_LIT_STRING

   12 literalNum: TK_LIT_INT
   13           | TK_LIT_FLOAT

   14 literalBool: TK_LIT_TRUE
   15            | TK_LIT_FALSE

   16 simples: bloco ';'
   17        | local
   18        | att ';'
   19        | io
   20        | shift
   21        | rbc
   22        | if
   23        | while
   24        | for
   25        | chamada ';'

   26 indexador: '[' TK_LIT_INT ']'

   27 operando: literalNum
   28         | TK_IDENTIFICADOR
   29         | TK_IDENTIFICADOR indexador
   30         | chamada
   31         | literalBool

   32 opShift: TK_OC_SL
   33        | TK_OC_SR

   34 opNivel1: '^'

   35 opNivel2: '*'
   36         | '/'
   37         | '%'

   38 opNivel3: '+'
   39         | '-'

   40 opNivel4: TK_OC_LE
   41         | TK_OC_GE
   42         | TK_OC_EQ
   43         | TK_OC_NE
   44         | '<'
   45         | '>'

   46 opNivel5: '&'
   47         | '|'

   48 opNivel6: TK_OC_AND
   49         | TK_OC_OR

   50 expressao: E0
   51          | expressao '?' E0 ':' E0

   52 E0: E1
   53   | E0 opNivel6 E1

   54 E1: E2
   55   | E1 opNivel5 E2

   56 E2: E3
   57   | E2 opNivel4 E3

   58 E3: E4
   59   | E3 opNivel3 E4

   60 E4: E5
   61   | E4 opNivel2 E5

   62 E5: E6
   63   | E5 opNivel1 E6

   64 E6: operando
   65   | '(' expressao ')'
   66   | '-' E6
   67   | '+' E6
   68   | '*' E6
   69   | '&' E6
   70   | '#' E6
   71   | '!' E6
   72   | '?' E6

   73 programa: global
   74         | funcao
   75         | programa global
   76         | programa funcao

   77 global: TK_PR_STATIC A
   78       | A

   79 A: tipo B

   80 B: TK_IDENTIFICADOR C

   81 C: ';'
   82  | ',' B
   83  | indexador D

   84 D: ';'
   85  | ',' B

   86 funcao: TK_PR_STATIC F1
   87       | F1

   88 F1: tipo F2

   89 F2: TK_IDENTIFICADOR F3

   90 F3: '(' F4

   91 F4: ')' bloco
   92   | tipo F5
   93   | TK_PR_CONST tipo F5

   94 F5: TK_IDENTIFICADOR F6

   95 F6: ')' bloco
   96   | ',' F7

   97 F7: tipo F5
   98   | TK_PR_CONST tipo F5

   99 bloco: '{' B1

  100 B1: '}'
  101   | simples B1

  102 local: L1
  103      | TK_PR_STATIC L1
  104      | TK_PR_CONST L1
  105      | TK_PR_STATIC TK_PR_CONST L1

  106 L1: tipo L2

  107 L2: TK_IDENTIFICADOR L3

  108 L3: ';'
  109   | TK_OC_LE L4
  110   | ',' L5

  111 L4: TK_IDENTIFICADOR ';'
  112   | literal ';'

  113 L5: TK_IDENTIFICADOR L6

  114 L6: ',' L5
  115   | ';'

  116 att: TK_IDENTIFICADOR A1

  117 A1: '=' A2
  118   | '[' expressao ']' '=' A2

  119 A2: expressao

  120 io: entrada
  121   | saida

  122 entrada: TK_PR_INPUT TK_IDENTIFICADOR ';'

  123 saida: TK_PR_OUTPUT TK_IDENTIFICADOR ';'
  124      | TK_PR_OUTPUT literal ';'

  125 chamada: TK_IDENTIFICADOR '(' C1 ')'
  126        | TK_IDENTIFICADOR '(' ')'

  127 C1: expressao
  128   | expressao C2

  129 C2: ',' C1

  130 shift: TK_IDENTIFICADOR S1

  131 S1: '[' expressao ']' opShift S2
  132   | opShift S2

  133 S2: TK_LIT_INT ';'

  134 rbc: TK_PR_RETURN expressao ';'
  135    | TK_PR_CONTINUE ';'
  136    | TK_PR_BREAK ';'

  137 if: TK_PR_IF '(' expressao ')' bloco
  138   | TK_PR_IF '(' expressao ')' bloco I1

  139 I1: TK_PR_ELSE bloco

  140 while: TK_PR_WHILE '(' expressao ')' TK_PR_DO bloco

  141 for: TK_PR_FOR '(' att ':' expressao ':' att ')' bloco


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 71
    '#' (35) 70
    '%' (37) 37
    '&' (38) 46 69
    '(' (40) 65 90 125 126 137 138 140 141
    ')' (41) 65 91 95 125 126 137 138 140 141
    '*' (42) 35 68
    '+' (43) 38 67
    ',' (44) 82 85 96 110 114 129
    '-' (45) 39 66
    '/' (47) 36
    ':' (58) 51 141
    ';' (59) 16 18 25 81 84 108 111 112 115 122 123 124 133 134 135 136
    '<' (60) 44
    '=' (61) 117 118
    '>' (62) 45
    '?' (63) 51 72
    '[' (91) 26 118 131
    ']' (93) 26 118 131
    '^' (94) 34
    '{' (123) 99
    '|' (124) 47
    '}' (125) 100
    error (256)
    TK_PR_INT (258) 1
    TK_PR_FLOAT (259) 2
    TK_PR_BOOL (260) 3
    TK_PR_CHAR (261) 4
    TK_PR_STRING (262) 5
    TK_PR_IF (263) 137 138
    TK_PR_THEN (264)
    TK_PR_ELSE (265) 139
    TK_PR_WHILE (266) 140
    TK_PR_DO (267) 140
    TK_PR_INPUT (268) 122
    TK_PR_OUTPUT (269) 123 124
    TK_PR_RETURN (270) 134
    TK_PR_CONST (271) 93 98 104 105
    TK_PR_STATIC (272) 77 86 103 105
    TK_PR_FOREACH (273)
    TK_PR_FOR (274) 141
    TK_PR_SWITCH (275)
    TK_PR_CASE (276)
    TK_PR_BREAK (277) 136
    TK_PR_CONTINUE (278) 135
    TK_PR_CLASS (279)
    TK_PR_PRIVATE (280)
    TK_PR_PUBLIC (281)
    TK_PR_PROTECTED (282)
    TK_PR_END (283)
    TK_PR_DEFAULT (284)
    TK_OC_LE (285) 40 109
    TK_OC_GE (286) 41
    TK_OC_EQ (287) 42
    TK_OC_NE (288) 43
    TK_OC_AND (289) 48
    TK_OC_OR (290) 49
    TK_OC_SL (291) 32
    TK_OC_SR (292) 33
    TK_LIT_INT (293) 6 12 26 133
    TK_LIT_FLOAT (294) 7 13
    TK_LIT_FALSE (295) 8 15
    TK_LIT_TRUE (296) 9 14
    TK_LIT_CHAR (297) 10
    TK_LIT_STRING (298) 11
    TK_IDENTIFICADOR (299) 28 29 80 89 94 107 111 113 116 122 123 125 126 130
    TOKEN_ERRO (300)
    NEG (301)
    POINTER (302)
    ADDRESS (303)
    PLUS (304)
    HASHTAG (305)
    INVERTBOOL (306)
    EVALBOOL (307)
    HASHTAGRIGHT (308)
    STARRIGHT (309)
    AMPERSANDRIGHT (310)


Nonterminals, with rules where they appear

    $accept (79)
        on left: 0
    tipo (80)
        on left: 1 2 3 4 5
        on right: 79 88 92 93 97 98 106
    literal (81)
        on left: 6 7 8 9 10 11
        on right: 112 124
    literalNum (82)
        on left: 12 13
        on right: 27
    literalBool (83)
        on left: 14 15
        on right: 31
    simples (84)
        on left: 16 17 18 19 20 21 22 23 24 25
        on right: 101
    indexador (85)
        on left: 26
        on right: 29 83
    operando (86)
        on left: 27 28 29 30 31
        on right: 64
    opShift (87)
        on left: 32 33
        on right: 131 132
    opNivel1 (88)
        on left: 34
        on right: 63
    opNivel2 (89)
        on left: 35 36 37
        on right: 61
    opNivel3 (90)
        on left: 38 39
        on right: 59
    opNivel4 (91)
        on left: 40 41 42 43 44 45
        on right: 57
    opNivel5 (92)
        on left: 46 47
        on right: 55
    opNivel6 (93)
        on left: 48 49
        on right: 53
    expressao (94)
        on left: 50 51
        on right: 51 65 118 119 127 128 131 134 137 138 140 141
    E0 (95)
        on left: 52 53
        on right: 50 51 53
    E1 (96)
        on left: 54 55
        on right: 52 53 55
    E2 (97)
        on left: 56 57
        on right: 54 55 57
    E3 (98)
        on left: 58 59
        on right: 56 57 59
    E4 (99)
        on left: 60 61
        on right: 58 59 61
    E5 (100)
        on left: 62 63
        on right: 60 61 63
    E6 (101)
        on left: 64 65 66 67 68 69 70 71 72
        on right: 62 63 66 67 68 69 70 71 72
    programa (102)
        on left: 73 74 75 76
        on right: 0 75 76
    global (103)
        on left: 77 78
        on right: 73 75
    A (104)
        on left: 79
        on right: 77 78
    B (105)
        on left: 80
        on right: 79 82 85
    C (106)
        on left: 81 82 83
        on right: 80
    D (107)
        on left: 84 85
        on right: 83
    funcao (108)
        on left: 86 87
        on right: 74 76
    F1 (109)
        on left: 88
        on right: 86 87
    F2 (110)
        on left: 89
        on right: 88
    F3 (111)
        on left: 90
        on right: 89
    F4 (112)
        on left: 91 92 93
        on right: 90
    F5 (113)
        on left: 94
        on right: 92 93 97 98
    F6 (114)
        on left: 95 96
        on right: 94
    F7 (115)
        on left: 97 98
        on right: 96
    bloco (116)
        on left: 99
        on right: 16 91 95 137 138 139 140 141
    B1 (117)
        on left: 100 101
        on right: 99 101
    local (118)
        on left: 102 103 104 105
        on right: 17
    L1 (119)
        on left: 106
        on right: 102 103 104 105
    L2 (120)
        on left: 107
        on right: 106
    L3 (121)
        on left: 108 109 110
        on right: 107
    L4 (122)
        on left: 111 112
        on right: 109
    L5 (123)
        on left: 113
        on right: 110 114
    L6 (124)
        on left: 114 115
        on right: 113
    att (125)
        on left: 116
        on right: 18 141
    A1 (126)
        on left: 117 118
        on right: 116
    A2 (127)
        on left: 119
        on right: 117 118
    io (128)
        on left: 120 121
        on right: 19
    entrada (129)
        on left: 122
        on right: 120
    saida (130)
        on left: 123 124
        on right: 121
    chamada (131)
        on left: 125 126
        on right: 25 30
    C1 (132)
        on left: 127 128
        on right: 125 129
    C2 (133)
        on left: 129
        on right: 128
    shift (134)
        on left: 130
        on right: 20
    S1 (135)
        on left: 131 132
        on right: 130
    S2 (136)
        on left: 133
        on right: 131 132
    rbc (137)
        on left: 134 135 136
        on right: 21
    if (138)
        on left: 137 138
        on right: 22
    I1 (139)
        on left: 139
        on right: 138
    while (140)
        on left: 140
        on right: 23
    for (141)
        on left: 141
        on right: 24


State 0

    0 $accept: . programa $end

    TK_PR_INT     shift, and go to state 1
    TK_PR_FLOAT   shift, and go to state 2
    TK_PR_BOOL    shift, and go to state 3
    TK_PR_CHAR    shift, and go to state 4
    TK_PR_STRING  shift, and go to state 5
    TK_PR_STATIC  shift, and go to state 6

    tipo      go to state 7
    programa  go to state 8
    global    go to state 9
    A         go to state 10
    funcao    go to state 11
    F1        go to state 12


State 1

    1 tipo: TK_PR_INT .

    $default  reduce using rule 1 (tipo)


State 2

    2 tipo: TK_PR_FLOAT .

    $default  reduce using rule 2 (tipo)


State 3

    3 tipo: TK_PR_BOOL .

    $default  reduce using rule 3 (tipo)


State 4

    4 tipo: TK_PR_CHAR .

    $default  reduce using rule 4 (tipo)


State 5

    5 tipo: TK_PR_STRING .

    $default  reduce using rule 5 (tipo)


State 6

   77 global: TK_PR_STATIC . A
   86 funcao: TK_PR_STATIC . F1

    TK_PR_INT     shift, and go to state 1
    TK_PR_FLOAT   shift, and go to state 2
    TK_PR_BOOL    shift, and go to state 3
    TK_PR_CHAR    shift, and go to state 4
    TK_PR_STRING  shift, and go to state 5

    tipo  go to state 7
    A     go to state 13
    F1    go to state 14


State 7

   79 A: tipo . B
   88 F1: tipo . F2

    TK_IDENTIFICADOR  shift, and go to state 15

    B   go to state 16
    F2  go to state 17


State 8

    0 $accept: programa . $end
   75 programa: programa . global
   76         | programa . funcao

    $end          shift, and go to state 18
    TK_PR_INT     shift, and go to state 1
    TK_PR_FLOAT   shift, and go to state 2
    TK_PR_BOOL    shift, and go to state 3
    TK_PR_CHAR    shift, and go to state 4
    TK_PR_STRING  shift, and go to state 5
    TK_PR_STATIC  shift, and go to state 6

    tipo    go to state 7
    global  go to state 19
    A       go to state 10
    funcao  go to state 20
    F1      go to state 12


State 9

   73 programa: global .

    $default  reduce using rule 73 (programa)


State 10

   78 global: A .

    $default  reduce using rule 78 (global)


State 11

   74 programa: funcao .

    $default  reduce using rule 74 (programa)


State 12

   87 funcao: F1 .

    $default  reduce using rule 87 (funcao)


State 13

   77 global: TK_PR_STATIC A .

    $default  reduce using rule 77 (global)


State 14

   86 funcao: TK_PR_STATIC F1 .

    $default  reduce using rule 86 (funcao)


State 15

   80 B: TK_IDENTIFICADOR . C
   89 F2: TK_IDENTIFICADOR . F3

    ';'  shift, and go to state 21
    '['  shift, and go to state 22
    '('  shift, and go to state 23
    ','  shift, and go to state 24

    indexador  go to state 25
    C          go to state 26
    F3         go to state 27


State 16

   79 A: tipo B .

    $default  reduce using rule 79 (A)


State 17

   88 F1: tipo F2 .

    $default  reduce using rule 88 (F1)


State 18

    0 $accept: programa $end .

    $default  accept


State 19

   75 programa: programa global .

    $default  reduce using rule 75 (programa)


State 20

   76 programa: programa funcao .

    $default  reduce using rule 76 (programa)


State 21

   81 C: ';' .

    $default  reduce using rule 81 (C)


State 22

   26 indexador: '[' . TK_LIT_INT ']'

    TK_LIT_INT  shift, and go to state 28


State 23

   90 F3: '(' . F4

    TK_PR_INT     shift, and go to state 1
    TK_PR_FLOAT   shift, and go to state 2
    TK_PR_BOOL    shift, and go to state 3
    TK_PR_CHAR    shift, and go to state 4
    TK_PR_STRING  shift, and go to state 5
    TK_PR_CONST   shift, and go to state 29
    ')'           shift, and go to state 30

    tipo  go to state 31
    F4    go to state 32


State 24

   82 C: ',' . B

    TK_IDENTIFICADOR  shift, and go to state 33

    B  go to state 34


State 25

   83 C: indexador . D

    ';'  shift, and go to state 35
    ','  shift, and go to state 36

    D  go to state 37


State 26

   80 B: TK_IDENTIFICADOR C .

    $default  reduce using rule 80 (B)


State 27

   89 F2: TK_IDENTIFICADOR F3 .

    $default  reduce using rule 89 (F2)


State 28

   26 indexador: '[' TK_LIT_INT . ']'

    ']'  shift, and go to state 38


State 29

   93 F4: TK_PR_CONST . tipo F5

    TK_PR_INT     shift, and go to state 1
    TK_PR_FLOAT   shift, and go to state 2
    TK_PR_BOOL    shift, and go to state 3
    TK_PR_CHAR    shift, and go to state 4
    TK_PR_STRING  shift, and go to state 5

    tipo  go to state 39


State 30

   91 F4: ')' . bloco

    '{'  shift, and go to state 40

    bloco  go to state 41


State 31

   92 F4: tipo . F5

    TK_IDENTIFICADOR  shift, and go to state 42

    F5  go to state 43


State 32

   90 F3: '(' F4 .

    $default  reduce using rule 90 (F3)


State 33

   80 B: TK_IDENTIFICADOR . C

    ';'  shift, and go to state 21
    '['  shift, and go to state 22
    ','  shift, and go to state 24

    indexador  go to state 25
    C          go to state 26


State 34

   82 C: ',' B .

    $default  reduce using rule 82 (C)


State 35

   84 D: ';' .

    $default  reduce using rule 84 (D)


State 36

   85 D: ',' . B

    TK_IDENTIFICADOR  shift, and go to state 33

    B  go to state 44


State 37

   83 C: indexador D .

    $default  reduce using rule 83 (C)


State 38

   26 indexador: '[' TK_LIT_INT ']' .

    $default  reduce using rule 26 (indexador)


State 39

   93 F4: TK_PR_CONST tipo . F5

    TK_IDENTIFICADOR  shift, and go to state 42

    F5  go to state 45


State 40

   99 bloco: '{' . B1

    TK_PR_INT         shift, and go to state 1
    TK_PR_FLOAT       shift, and go to state 2
    TK_PR_BOOL        shift, and go to state 3
    TK_PR_CHAR        shift, and go to state 4
    TK_PR_STRING      shift, and go to state 5
    TK_PR_IF          shift, and go to state 46
    TK_PR_WHILE       shift, and go to state 47
    TK_PR_INPUT       shift, and go to state 48
    TK_PR_OUTPUT      shift, and go to state 49
    TK_PR_RETURN      shift, and go to state 50
    TK_PR_CONST       shift, and go to state 51
    TK_PR_STATIC      shift, and go to state 52
    TK_PR_FOR         shift, and go to state 53
    TK_PR_BREAK       shift, and go to state 54
    TK_PR_CONTINUE    shift, and go to state 55
    TK_IDENTIFICADOR  shift, and go to state 56
    '{'               shift, and go to state 40
    '}'               shift, and go to state 57

    tipo     go to state 58
    simples  go to state 59
    bloco    go to state 60
    B1       go to state 61
    local    go to state 62
    L1       go to state 63
    att      go to state 64
    io       go to state 65
    entrada  go to state 66
    saida    go to state 67
    chamada  go to state 68
    shift    go to state 69
    rbc      go to state 70
    if       go to state 71
    while    go to state 72
    for      go to state 73


State 41

   91 F4: ')' bloco .

    $default  reduce using rule 91 (F4)


State 42

   94 F5: TK_IDENTIFICADOR . F6

    ')'  shift, and go to state 74
    ','  shift, and go to state 75

    F6  go to state 76


State 43

   92 F4: tipo F5 .

    $default  reduce using rule 92 (F4)


State 44

   85 D: ',' B .

    $default  reduce using rule 85 (D)


State 45

   93 F4: TK_PR_CONST tipo F5 .

    $default  reduce using rule 93 (F4)


State 46

  137 if: TK_PR_IF . '(' expressao ')' bloco
  138   | TK_PR_IF . '(' expressao ')' bloco I1

    '('  shift, and go to state 77


State 47

  140 while: TK_PR_WHILE . '(' expressao ')' TK_PR_DO bloco

    '('  shift, and go to state 78


State 48

  122 entrada: TK_PR_INPUT . TK_IDENTIFICADOR ';'

    TK_IDENTIFICADOR  shift, and go to state 79


State 49

  123 saida: TK_PR_OUTPUT . TK_IDENTIFICADOR ';'
  124      | TK_PR_OUTPUT . literal ';'

    TK_LIT_INT        shift, and go to state 80
    TK_LIT_FLOAT      shift, and go to state 81
    TK_LIT_FALSE      shift, and go to state 82
    TK_LIT_TRUE       shift, and go to state 83
    TK_LIT_CHAR       shift, and go to state 84
    TK_LIT_STRING     shift, and go to state 85
    TK_IDENTIFICADOR  shift, and go to state 86

    literal  go to state 87


State 50

  134 rbc: TK_PR_RETURN . expressao ';'

    TK_LIT_INT        shift, and go to state 88
    TK_LIT_FLOAT      shift, and go to state 89
    TK_LIT_FALSE      shift, and go to state 90
    TK_LIT_TRUE       shift, and go to state 91
    TK_IDENTIFICADOR  shift, and go to state 92
    '*'               shift, and go to state 93
    '+'               shift, and go to state 94
    '-'               shift, and go to state 95
    '&'               shift, and go to state 96
    '?'               shift, and go to state 97
    '('               shift, and go to state 98
    '#'               shift, and go to state 99
    '!'               shift, and go to state 100

    literalNum   go to state 101
    literalBool  go to state 102
    operando     go to state 103
    expressao    go to state 104
    E0           go to state 105
    E1           go to state 106
    E2           go to state 107
    E3           go to state 108
    E4           go to state 109
    E5           go to state 110
    E6           go to state 111
    chamada      go to state 112


State 51

  104 local: TK_PR_CONST . L1

    TK_PR_INT     shift, and go to state 1
    TK_PR_FLOAT   shift, and go to state 2
    TK_PR_BOOL    shift, and go to state 3
    TK_PR_CHAR    shift, and go to state 4
    TK_PR_STRING  shift, and go to state 5

    tipo  go to state 58
    L1    go to state 113


State 52

  103 local: TK_PR_STATIC . L1
  105      | TK_PR_STATIC . TK_PR_CONST L1

    TK_PR_INT     shift, and go to state 1
    TK_PR_FLOAT   shift, and go to state 2
    TK_PR_BOOL    shift, and go to state 3
    TK_PR_CHAR    shift, and go to state 4
    TK_PR_STRING  shift, and go to state 5
    TK_PR_CONST   shift, and go to state 114

    tipo  go to state 58
    L1    go to state 115


State 53

  141 for: TK_PR_FOR . '(' att ':' expressao ':' att ')' bloco

    '('  shift, and go to state 116


State 54

  136 rbc: TK_PR_BREAK . ';'

    ';'  shift, and go to state 117


State 55

  135 rbc: TK_PR_CONTINUE . ';'

    ';'  shift, and go to state 118


State 56

  116 att: TK_IDENTIFICADOR . A1
  125 chamada: TK_IDENTIFICADOR . '(' C1 ')'
  126        | TK_IDENTIFICADOR . '(' ')'
  130 shift: TK_IDENTIFICADOR . S1

    TK_OC_SL  shift, and go to state 119
    TK_OC_SR  shift, and go to state 120
    '['       shift, and go to state 121
    '('       shift, and go to state 122
    '='       shift, and go to state 123

    opShift  go to state 124
    A1       go to state 125
    S1       go to state 126


State 57

  100 B1: '}' .

    $default  reduce using rule 100 (B1)


State 58

  106 L1: tipo . L2

    TK_IDENTIFICADOR  shift, and go to state 127

    L2  go to state 128


State 59

  101 B1: simples . B1

    TK_PR_INT         shift, and go to state 1
    TK_PR_FLOAT       shift, and go to state 2
    TK_PR_BOOL        shift, and go to state 3
    TK_PR_CHAR        shift, and go to state 4
    TK_PR_STRING      shift, and go to state 5
    TK_PR_IF          shift, and go to state 46
    TK_PR_WHILE       shift, and go to state 47
    TK_PR_INPUT       shift, and go to state 48
    TK_PR_OUTPUT      shift, and go to state 49
    TK_PR_RETURN      shift, and go to state 50
    TK_PR_CONST       shift, and go to state 51
    TK_PR_STATIC      shift, and go to state 52
    TK_PR_FOR         shift, and go to state 53
    TK_PR_BREAK       shift, and go to state 54
    TK_PR_CONTINUE    shift, and go to state 55
    TK_IDENTIFICADOR  shift, and go to state 56
    '{'               shift, and go to state 40
    '}'               shift, and go to state 57

    tipo     go to state 58
    simples  go to state 59
    bloco    go to state 60
    B1       go to state 129
    local    go to state 62
    L1       go to state 63
    att      go to state 64
    io       go to state 65
    entrada  go to state 66
    saida    go to state 67
    chamada  go to state 68
    shift    go to state 69
    rbc      go to state 70
    if       go to state 71
    while    go to state 72
    for      go to state 73


State 60

   16 simples: bloco . ';'

    ';'  shift, and go to state 130


State 61

   99 bloco: '{' B1 .

    $default  reduce using rule 99 (bloco)


State 62

   17 simples: local .

    $default  reduce using rule 17 (simples)


State 63

  102 local: L1 .

    $default  reduce using rule 102 (local)


State 64

   18 simples: att . ';'

    ';'  shift, and go to state 131


State 65

   19 simples: io .

    $default  reduce using rule 19 (simples)


State 66

  120 io: entrada .

    $default  reduce using rule 120 (io)


State 67

  121 io: saida .

    $default  reduce using rule 121 (io)


State 68

   25 simples: chamada . ';'

    ';'  shift, and go to state 132


State 69

   20 simples: shift .

    $default  reduce using rule 20 (simples)


State 70

   21 simples: rbc .

    $default  reduce using rule 21 (simples)


State 71

   22 simples: if .

    $default  reduce using rule 22 (simples)


State 72

   23 simples: while .

    $default  reduce using rule 23 (simples)


State 73

   24 simples: for .

    $default  reduce using rule 24 (simples)


State 74

   95 F6: ')' . bloco

    '{'  shift, and go to state 40

    bloco  go to state 133


State 75

   96 F6: ',' . F7

    TK_PR_INT     shift, and go to state 1
    TK_PR_FLOAT   shift, and go to state 2
    TK_PR_BOOL    shift, and go to state 3
    TK_PR_CHAR    shift, and go to state 4
    TK_PR_STRING  shift, and go to state 5
    TK_PR_CONST   shift, and go to state 134

    tipo  go to state 135
    F7    go to state 136


State 76

   94 F5: TK_IDENTIFICADOR F6 .

    $default  reduce using rule 94 (F5)


State 77

  137 if: TK_PR_IF '(' . expressao ')' bloco
  138   | TK_PR_IF '(' . expressao ')' bloco I1

    TK_LIT_INT        shift, and go to state 88
    TK_LIT_FLOAT      shift, and go to state 89
    TK_LIT_FALSE      shift, and go to state 90
    TK_LIT_TRUE       shift, and go to state 91
    TK_IDENTIFICADOR  shift, and go to state 92
    '*'               shift, and go to state 93
    '+'               shift, and go to state 94
    '-'               shift, and go to state 95
    '&'               shift, and go to state 96
    '?'               shift, and go to state 97
    '('               shift, and go to state 98
    '#'               shift, and go to state 99
    '!'               shift, and go to state 100

    literalNum   go to state 101
    literalBool  go to state 102
    operando     go to state 103
    expressao    go to state 137
    E0           go to state 105
    E1           go to state 106
    E2           go to state 107
    E3           go to state 108
    E4           go to state 109
    E5           go to state 110
    E6           go to state 111
    chamada      go to state 112


State 78

  140 while: TK_PR_WHILE '(' . expressao ')' TK_PR_DO bloco
